objects/Order/fields/Account_Financial_Account__c.field-meta.xml
<CustomField>
    <fullName>Account_Financial_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Financial Account</label>
    <referenceTo>Account_Financial_Account__c</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>