objects/Order/fields/Error_Code__c.field-meta.xml
<CustomField>
    <fullName>Error_Code__c</fullName>
    <label>Error Code</label>
    <type>TextArea</type>
</CustomField>