objects/Order/fields/Error_Description__c.field-meta.xml
<CustomField>
    <fullName>Error_Description__c</fullName>
    <label>Error Description</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>