objects/Order/fields/Payment_ID__c.field-meta.xml
<CustomField>
    <fullName>Payment_ID__c</fullName>
    <label>Payment ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>