objects/Order/fields/Source_Channel__c.field-meta.xml
<CustomField>
    <fullName>Source_Channel__c</fullName>
    <label>Source Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Source_Channel</valueSetName>
    </valueSet>
</CustomField>